Refactor cdk-s3-explorer to use native Cognito authentication, removing Okta integration. Update deployment script to configure CORS for S3 and Cognito User Pool Client. Adjust web app to reflect changes in authentication method.

--- a/cdk-s3-explorer/web-app/public/index.html
+++ b/cdk-s3-explorer/web-app/public/index.html
@@ -86,9 +86,9 @@
                 <div class="card">
                     <div class="card-body text-center">
                         <h1 class="mb-4">Secure S3 Explorer</h1>
-                        <p class="text-muted mb-4">Sign in with your Okta account to access the file explorer</p>
+                        <p class="text-muted mb-4">Sign in with your Cognito account to access the file explorer</p>
                         <button id="loginButton" class="btn btn-primary btn-lg">
-                            <i class="bi bi-box-arrow-in-right"></i> Sign in with Okta
+                            <i class="bi bi-box-arrow-in-right"></i> Sign in with Cognito
                         </button>
                     </div>
                 </div>
